# ChangeLog for net-voip/telepathy-gabble
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-gabble/ChangeLog,v 1.100 2012/09/15 08:03:49 pacho Exp $

*telepathy-gabble-0.16.3 (15 Sep 2012)

  15 Sep 2012; Pacho Ramos <pacho@gentoo.org> +telepathy-gabble-0.16.3.ebuild,
  -telepathy-gabble-0.16.0.ebuild:
  Version bump, drop old.

*telepathy-gabble-0.16.1 (23 Jun 2012)

  23 Jun 2012; Pacho Ramos <pacho@gentoo.org> +telepathy-gabble-0.16.1.ebuild,
  -telepathy-gabble-0.12.7.ebuild, -telepathy-gabble-0.15.5.ebuild:
  Version bump, remove old.

*telepathy-gabble-0.16.0 (23 Apr 2012)

  23 Apr 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +telepathy-gabble-0.16.0.ebuild:
  Bump to first stable 0.16 release. Telepathy-gabble's private librariess are
  now installed in /usr/lib/telepathy/gabble-0/lib.

*telepathy-gabble-0.15.5 (21 Apr 2012)

  21 Apr 2012; Nirbheek Chauhan <nirbheek@gentoo.org>
  -telepathy-gabble-0.14.0.ebuild, +telepathy-gabble-0.15.5.ebuild:
  Bump to 0.15.5, for use with tp-glib-0.17.7

  25 Mar 2012; Raúl Porcel <armin76@gentoo.org>
  telepathy-gabble-0.14.1.ebuild:
  alpha/ia64/sparc stable wrt #393007

  05 Mar 2012; Brent Baude <ranger@gentoo.org> telepathy-gabble-0.14.1.ebuild:
  Marking telepathy-gabble-0.14.1 ppc stable for bug 393007

  14 Jan 2012; Markus Meier <maekke@gentoo.org> telepathy-gabble-0.14.1.ebuild:
  x86 stable, bug #393007

  29 Dec 2011; Pacho Ramos <pacho@gentoo.org> telepathy-gabble-0.14.1.ebuild:
  amd64 stable, bug 393007

*telepathy-gabble-0.14.1 (26 Nov 2011)

  26 Nov 2011; Pacho Ramos <pacho@gentoo.org> +telepathy-gabble-0.14.1.ebuild:
  Version bump.

*telepathy-gabble-0.14.0 (20 Nov 2011)

  20 Nov 2011; Pacho Ramos <pacho@gentoo.org> -telepathy-gabble-0.10.5.ebuild,
  -telepathy-gabble-0.12.1.ebuild, -telepathy-gabble-0.12.6.ebuild,
  +telepathy-gabble-0.14.0.ebuild: