@@ -1,6 +1,10 @@
 # ChangeLog for net-voip/telepathy-salut
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-salut/ChangeLog,v 1.39 2012/05/03 07:27:48 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-salut/ChangeLog,v 1.40 2012/10/03 15:44:32 phajdan.jr Exp $
+
+  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  telepathy-salut-0.8.0.ebuild:
+  x86 stable wrt bug #427544
 
   03 May 2012; Jeff Horelick <jdhore@gentoo.org> telepathy-salut-0.6.0.ebuild,
   telepathy-salut-0.8.0.ebuild:
